# relief.cpp

./: CMakeLists.txt  README.md  RTMA_Functions.ush  glwidget.cpp  glwidget.h  heightmap.cpp  heightmap.h  heightmap_worker.h  main_gui.cpp  mainwindow.cpp  mainwindow.h  qem.cpp  qem.h  relief.ush  reliefglwidget.cpp  reliefglwidget.h  texture_prep.cpp  texture_prep_worker.cpp  uv_atlas.cpp  uv_atlas.h
.github/workflows/: build-windows.yml
docs/: envelope-simplification-plan.md
gui/: CMakeLists.txt
gui/include/gui/: glwidget.h  heightmap_module.h  heightmap_worker.h  mainwindow.h  orbital3dview.h  overlayglwidget.h  relief_module.h  relief_test_module.h  relief_view.h  reliefglwidget.h  simplifier_module.h  texture_inspector_dialog.h  texture_prep.h  texture_prep_module.h  texture_prep_worker.h
gui/src/: glwidget.cpp  heightmap_module.cpp  heightmap_worker.cpp  main.cpp  main_gui.cpp  mainwindow.cpp  orbital3dview.cpp  overlayglwidget.cpp  relief_module.cpp  relief_test_module.cpp  relief_view.cpp  reliefglwidget.cpp  simplifier_module.cpp  texture_inspector_dialog.cpp  texture_prep.cpp  texture_prep_module.cpp  texture_prep_worker.cpp
gui/src/shaders/: relief.frag  relief.vert
relief/: CMakeLists.txt
relief/include/core/: qem.h
relief/include/relief/: heightmap.h  textures.h  uv_atlas.h
relief/src/: heightmap.cpp  qem.cpp  qem_gltf.cpp  textures.cpp  uv_atlas.cpp
source/: heightmap.cpp  heightmap.h  heightmap_worker.cpp  heightmap_worker.h  mainwindow.cpp  mainwindow.h  overlayglwidget.cpp  overlayglwidget.h  qem.cpp  qem.h  qem_gltf.cpp  reliefglwidget.cpp  reliefglwidget.h  texture_prep.cpp  texture_prep.h  texture_prep_worker.h
source/shaders/: relief.frag  relief.vert  shaders.qrc
